src/test/deca/syntax/valid/assign_print.deca
// Déclaraion - affectation - impression

{
    int x;
    x = 21;
    println(x);
}