src/test/deca/syntax/invalid/decl_missing_expr.deca

//Syntaxe expr obligatoire apres =
//Attendu : erreur sur ;

{
    int x = ;
}